fix: 체결 계획 Provider를 CORE-02 계약에 맞춘다
TODO(SCENARIO-04). origin/feat/core-02-fill-plan-provider(c7c7697)의 실제 계약을
확인한 결과 FillPlan create(long orderQuantity) 하나였다. create(long, ExecutionSpec)
으로는 implements를 붙일 수 없고, core는 시나리오 타입을 몰라야 하므로 인자로 받을
수도 없다.

- ExecutionSpec을 생성자로 올리고 create(long)만 남긴다.
- after 파싱을 생성 시 한 번만 한다. create는 DES 엔진 스레드에서 주문마다 호출되므로
  거기서 정규식을 돌리지 않는다.
- 최소 1주 보장 때문에 step 수보다 적은 주문은 계획을 세울 수 없다. 필요한 수량을
  밝힌 메시지로 거부한다.
- core 의존을 api로 바꾼다. create()가 FillPlan을 공개 시그니처로 노출한다.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>